# remote-developer

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: precommit.yml  release-please.yml
docs/: building.plantuml  connectivity.plantuml  execution.plantuml  index.md  remote_developer_flowchart.plantuml  security.plantuml  syncing.plantuml
remote_developer/: CHANGELOG.md  __init__.py  pyproject.toml  remote-developer-config.example.json  remote-developer-config.json  remote_developer.py
remote_developer/components/: __init__.py  building.py  connectivity.py  execution.py  security.py  syncing.py
remote_developer/templates/: devcontainer-template.txt  docker-compose-template.txt  dockerfile-template.txt
remote_developer/utils/: __init__.py  cli_command_executor.py  logger.py  regcache.py  validation.py  wdm.py
