[project]
name = "remote-developer"
version = "0.2.0"
description = "Remote Developer Software"
authors = [ { name = "Wx"} ]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.8",
    "paramiko>=3.5.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "watchdog>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/mohamedashraf-eng/remote-developer"
"Bug Tracker" = "https://github.com/mohamedashraf-eng/remote-developer/issues"

[tool.uv.sources]
remote-developer = { index = "remote-developer" }
